# nexstar-evo

./: .gitignore  README.md
analysis/: cmds  connect-align-setup.raw  connect-goto-disconnect.cmds  connect-goto-disconnect.txt  connect-goto-disconnect.uniq_cmds
auto-align/: positions.txt
doc/: notes.md
indi-nexstarevo/: CMakeLists.txt  NexStarAUXScope.cpp  NexStarAUXScope.h  indi_nexstarevo.xml  nexstarevo.cpp  nexstarevo.h
notebook/: evo-test.ipynb  lib_test.ipynb
nsevo/: indidbus.py  nexstarevo.py
sattrack/: Tracking Simulation.ipynb  track_iss.py
xmtel/nexstar/: README
xmtel/nexstar/aux/: README  WARNING  protocol.c  protocol.h  protocol_01.c  protocol_01.h  protocol_02.c  protocol_02.h  protocol_03.c  protocol_03.h  protocol_04.c  protocol_04.h
xmtel/nexstar/hc/: protocol.c  protocol.h  protocol_01.c  protocol_01.h  protocol_02.c  protocol_02.h  protocol_03.c  protocol_03.h
xmtel/nexstar/pc/: README  WARNING  checksum.c  programming_notes.txt  protocol.c  protocol.h
xmtel/xmtel1/: Makefile  Makefile.galil  Makefile.mks  Makefile.rcos  Makefile.sitech  Makefile_lib64.rcos  NOTES  algorithms.c  algorithms.h  pointing.c  protocol.c  protocol.h  setup_bisque_mks  setup_galil  setup_lx200  setup_nexstar_aux  setup_nexstar_hc  setup_planewave_sitech  setup_rcos  xmtel1.c  xmtel1.h
